force-app/main/default/objects/Quote_Line__c/Quote_Line__c.object-meta.xml
<CustomObject>
    <description>Priced line on a quote. Stand-in for SBQQ__QuoteLine__c.</description>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>