force-app/main/default/objects/Quote_Line__c/fields/Base_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit_Price__c</fullName>
    <label>Base Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>