force-app/main/default/objects/Quote_Line__c/fields/Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Billing_Model__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>