force-app/main/default/objects/Quote_Line__c/fields/Contracted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Unit_Price__c</fullName>
    <label>Contracted Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>