force-app/main/default/objects/Quote_Line__c/fields/Effective_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount_Pct__c</fullName>
    <label>Effective Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>