force-app/main/default/objects/Quote_Line__c/fields/Is_Bundle_Component__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bundle Component</label>
    <type>Checkbox</type>
</CustomField>