force-app/main/default/objects/Quote_Line__c/fields/Is_Included__c.field-meta.xml
<CustomField>
    <fullName>Is_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Priced at zero; component is covered by the bundle price.</description>
    <label>Included In Bundle Price</label>
    <type>Checkbox</type>
</CustomField>