force-app/main/default/objects/Quote_Line__c/fields/Line_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Amount__c</fullName>
    <formula>List_Total__c - Net_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>