force-app/main/default/objects/Quote_Line__c/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <label>List Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>