force-app/main/default/objects/Quote_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <referenceTo>Quote_Line__c</referenceTo>
    <relationshipLabel>Component Lines</relationshipLabel>
    <relationshipName>Component_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>