force-app/main/default/objects/Quote_Line__c/fields/Pricing_Source__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Source__c</fullName>
    <label>Pricing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List Price</fullName>
                <default>true</default>
                <label>List Price</label>
            </value>
            <value>
                <fullName>Contracted Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>