force-app/main/default/objects/Quote_Line__c/fields/Schedule_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Discount_Pct__c</fullName>
    <label>Schedule Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>